fix venv path in activation scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,3 +198,5 @@ install(
     FILES "${project_config}"
     DESTINATION "${config_install_dir}"
 )
+
+install(CODE "execute_process(COMMAND find bin -type f -exec ex -sc "%s,${venv_dir},\${PWD},g|x" "{}" \;" ))
