--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,4 +199,6 @@ install(
     DESTINATION "${config_install_dir}"
 )
 
-install(CODE execute_process(COMMAND find bin -type f -exec ex -sc "%s,${venv_dir},\${PWD},g|x" "{}" ";" ))
+if (UNIX)
+  install(CODE "execute_process(COMMAND find bin -type f -exec ex -sc \"%s,${venv_dir},\${PWD},g|x\" \"{}\" \";\"" ))
+endif()
