--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,6 +200,5 @@ install(
 )
 
 if (UNIX)
-  install(CODE "execute_process(COMMAND find bin -type f -exec ex -sc \"%s,${venv_dir},\${PWD},g|x\" \"{}\" \";\")")
-  install(CODE "execute_process(COMMAND pwd OUTPUT_FILE /tmp/cmakelog.txt )")
+  install(CODE "execute_process(COMMAND find ${CMAKE_INSTALL_PREFIX}/bin -type f -exec ex -sc \"%s,${venv_dir},\${PWD},g|x\" \"{}\" \";\")")
 endif()
