--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,6 +200,6 @@ install(
 )
 
 if (UNIX)
-  message "venv dir: ${venv_dir}"
+  message("venv dir: ${venv_dir}")
   install(CODE "execute_process(COMMAND find ${CMAKE_INSTALL_PREFIX}/bin -type f -exec ex -sc \"%s,${venv_dir},${CMAKE_INSTALL_PREFIX},g|x\" \"{}\" \";\")")
 endif()
