--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,5 +201,6 @@ install(
 
 if (UNIX)
   message("venv dir: ${venv_dir}")
+  message("execute_process(COMMAND find ${CMAKE_INSTALL_PREFIX}/bin -type f -exec ex -sc \"%s,${venv_dir},${CMAKE_INSTALL_PREFIX},g|x\" \"{}\" \";\")")
   install(CODE "execute_process(COMMAND find ${CMAKE_INSTALL_PREFIX}/bin -type f -exec ex -sc \"%s,${venv_dir},${CMAKE_INSTALL_PREFIX},g|x\" \"{}\" \";\")")
 endif()
