copy python*-config to the venv

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,17 +43,6 @@ endif()
 
 find_package(Python ${HUNTER_VENV_PYTHON_VERSION} EXACT REQUIRED)
 
-###########################################################
-# All variables
-
-message("==== ALL VARIABLES  ===========================")
-get_cmake_property(_variableNames VARIABLES)
-list (SORT _variableNames)
-foreach (_variableName ${_variableNames})
-  message(STATUS "${_variableName}=${${_variableName}}")
-endforeach()
-message("==== END OF ALL VARIABLES  ===========================")
-
 message("Python_EXECUTABLE: ${Python_EXECUTABLE}")
 message("Python_SITELIB: ${Python_SITELIB}")
 
@@ -104,12 +93,13 @@ if(HUNTER_VENV_USE_3)
     )
   endif()
 
-  # virtualenv v0.20 and above does not copy python-config, venv never did. However a lot of (g*: gobject, gi, etc)
-  # packages needs it to be able to be configured. So let's do it here.
-#  file(GLOB PYTHON_CONFIG_EXECUTABLES
-#          "myDir/*.h"
-#          )
-#  file(COPY ${MY_PUBLIC_HEADERS} DESTINATION myDestination)
+  # virtualenv v0.20 and above does not copy python-config, the venv module never did. However a lot of
+  # (g*: gobject, gi, etc) packages needs it to be able to be configured. So let's do it here.
+  get_filename_component(PYTHON_BIN_DIR ${Python_EXECUTABLE} DIRECTORY)
+  file(GLOB PYTHON_CONFIG_EXECUTABLES
+          "${PYTHON_BIN_DIR}/python*-config"
+          )
+  file(COPY ${PYTHON_CONFIG_EXECUTABLES} DESTINATION ${venv_dir}/bin)
 
 endif()
 
