--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,6 +183,7 @@ if (UNIX)
 
   #venv does not copy the C headers, let's do it ourselves
   if (DEFINED USE_VENV)
+    message("Copying C headers...")
     file(COPY ${Python_ROOT_DIR}/include DESTINATION ${venv_dir}/include)
   endif()
 
